# ocoi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
data/: govil_records.json
frontend/: DESIGN_SYSTEM.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/documents/: page.tsx
frontend/src/app/admin/documents/detail/: page.tsx
frontend/src/app/admin/entities/: page.tsx
frontend/src/app/admin/entities/detail/: page.tsx
frontend/src/app/admin/import/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/admin/registry/: page.tsx
frontend/src/app/admin/relationships/: page.tsx
frontend/src/app/admin/settings/: page.tsx
frontend/src/app/admin/site-content/: page.tsx
frontend/src/app/api-docs/: page.tsx
frontend/src/app/entity/: page.tsx
frontend/src/app/entity/[id]/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/components/: EntityDiscovery.tsx  SiteShell.tsx
frontend/src/components/graph/: ConnectionMap.tsx  ConnectionTable.tsx
frontend/src/components/search/: SearchBar.tsx  SearchResults.tsx
frontend/src/lib/: admin-api.ts  api-client.ts  auth.ts
frontend/src/types/: cytoscape-fcose.d.ts
scripts/: run_pipeline.py  seed_data.py
tools/: local_app.py
tools/local_processor/: .env.example  __main__.py  ckan_fetch.py  config.py  convert.py  extract.py  push.py  state.py
